--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "scripts": {
     "test": "npx mocha -w --parallel **/**/*.test.js",
-    "test:cov":"npx nyc npx mocha --parallel **/**/*.test.js",
+    "test:cov": "npx nyc npx mocha --parallel **/**/*.test.js",
     "seed": "node ./seed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.6",
     "faker": "^5.5.3",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
